<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.account.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/forgotPassLogo"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/logo_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/wheresmytutor_nobackground" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/requestReasonTxtLayout"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintWidth_max="488dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassLogo"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailForgotPassTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                android:textColorHint="#A1887F"
                android:textSize="23sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sendForgotPassBtn"
            android:layout_width="0dp"
            app:layout_constraintWidth_max="320dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_height="55dp"
            android:layout_marginTop="80dp"
            android:text="@string/send_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requestReasonTxtLayout" />

        <Button
            android:id="@+id/cancelForgotPassBtn"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="0dp"
            app:layout_constraintWidth_max="320dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/cancel_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendForgotPassBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>