<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/meetingListParent"
    android:foreground="?attr/selectableItemBackground"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="1dp"
        android:paddingVertical="10dp"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            >
            <TextView
                android:id="@+id/meetingNameItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_text"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="128dp"
                android:textSize="20sp"
                android:layout_marginBottom="2dp"
                android:maxLines="1"
                />

            <TextView
                android:id="@+id/meetingSmallTextItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_text"
                android:layout_below="@id/meetingNameItem"
                android:textSize="13sp"
                />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/meetingItemBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_more_options_icon_black"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:iconSize="25sp"
            android:contentDescription="@string/more_options_content_desc"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>